task/BASH-30: установил ссылки везде где нашел

--- a/pages/lk_events/index.html
+++ b/pages/lk_events/index.html
@@ -58,28 +58,39 @@
     <div class="container">
         <div class="profile mt-sm">
             <ul class="profile-left ">
-                <li class="profile-left-item text-md ">Профиль
-                    <div class="profile-left-item-line"></div>
-                </li>
-                <li class="profile-left-item text-md active">Мои мероприятия 
-                    <div class="profile-left-item-line"></div>
-                    <p class="profile-left-item-placeholder text-sl blue">21</p>
-                </li>
-                <li class="profile-left-item text-md">История мероприятий
-                    <div class="profile-left-item-line"></div>
-                </li>
-                <li class="profile-left-item text-md">Баллы и рейтинг
-                    <div class="profile-left-item-line"></div>
-                    <p class="profile-left-item-placeholder text-sl pink">0 Б</p>
-                </li>
-                <li class="profile-left-item text-md">Отчёты
-                    <div class="profile-left-item-line"></div>
-                </li>
+                <a href="/pages/lk_profile/">
+                    <li class="profile-left-item text-md ">Профиль
+                        <div class="profile-left-item-line"></div>
+                    </li>
+                </a>
+                <a href="/pages/lk_events/">
+                    <li class="profile-left-item text-md active">Мои мероприятия 
+                        <div class="profile-left-item-line"></div>
+                        <p class="profile-left-item-placeholder text-sl blue">21</p>
+                    </li>
+                </a>
+                <a href="/pages/lk_events_history/">
+                    <li class="profile-left-item text-md">История мероприятий
+                        <div class="profile-left-item-line"></div>
+                    </li>
+                </a>
+                <a href="/pages/lk_score_and_rating/">
+                    <li class="profile-left-item text-md">Баллы и рейтинг
+                        <div class="profile-left-item-line"></div>
+                        <p class="profile-left-item-placeholder text-sl pink">0 Б</p>
+                    </li>
+                </a>
+                <a href="/pages/lk_reports/">
+                    <li class="profile-left-item text-md">Отчёты
+                        <div class="profile-left-item-line"></div>
+                    </li>
+                </a>
+     
             </ul>
             <div class="profile-right">
                     <p class="title-sm dark">Мои мероприятия</p>
             <div class="profile-right events">
-                <div class="event__card">
+                <a class="event__card" href="./index_detail.html">
                     <div class="event__card-top">
                         <img src="../../assets/imgs/Frame 27062.png" alt="image">
                         <div class="event__card-action"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -141,7 +152,7 @@
                             09:00 - 17:00
                         </p>
                     </div>
-                </div>
+                </a>
              
             </div>
         </div>
