--- a/pages/lk_score_and_rating/index.html
+++ b/pages/lk_score_and_rating/index.html
@@ -76,30 +76,36 @@
 
     <div class="container">
       <div class="profile mt-sm">
-        <ul class="profile-left">
-          <li class="profile-left-item text-md">
-            Профиль
-            <div class="profile-left-item-line"></div>
-          </li>
-          <li class="profile-left-item text-md">
-            Мои мероприятия
-            <div class="profile-left-item-line"></div>
-            <p class="profile-left-item-placeholder text-sl blue">21</p>
-          </li>
-          <li class="profile-left-item text-md">
-            История мероприятий
-            <div class="profile-left-item-line"></div>
-          </li>
-          <li class="profile-left-item text-md active">
-            Баллы и рейтинг
-            <div class="profile-left-item-line"></div>
-            <p class="profile-left-item-placeholder text-sl pink">100 Б</p>
-          </li>
-          <li class="profile-left-item text-md">
-            Отчёты
-            <div class="profile-left-item-line"></div>
-          </li>
-        </ul>
+        <ul class="profile-left ">
+          <a href="/pages/lk_profile/">
+              <li class="profile-left-item text-md ">Профиль
+                  <div class="profile-left-item-line"></div>
+              </li>
+          </a>
+          <a href="/pages/lk_events/">
+              <li class="profile-left-item text-md ">Мои мероприятия 
+                  <div class="profile-left-item-line"></div>
+                  <p class="profile-left-item-placeholder text-sl blue">21</p>
+              </li>
+          </a>
+          <a href="/pages/lk_events_history/">
+              <li class="profile-left-item text-md">История мероприятий
+                  <div class="profile-left-item-line"></div>
+              </li>
+          </a>
+          <a href="/pages/lk_score_and_rating/">
+              <li class="profile-left-item text-md active">Баллы и рейтинг
+                  <div class="profile-left-item-line"></div>
+                  <p class="profile-left-item-placeholder text-sl pink">0 Б</p>
+              </li>
+          </a>
+          <a href="/pages/lk_reports/">
+              <li class="profile-left-item text-md">Отчёты
+                  <div class="profile-left-item-line"></div>
+              </li>
+          </a>
+
+      </ul>
         <div class="profile-right score__and__rating">
           <p class="title-md dark">Баллы и рейтинг</p>
           <div class="profile-right-score__rating">
