task/BASH-43 Фикс ЛК инцидентов

--- a/pages/lk_events/index_detail.html
+++ b/pages/lk_events/index_detail.html
@@ -199,12 +199,12 @@
                                     <p class="text-md">Саркисян Карина Самвеловна</p>
                                     <span class="text-sm">Заместитель начальника отдела</span>
                                 </div>
-                                <p class="text-md">
+                                <a href="tel:+79859932616" class="text-md">
                                     <img src="../../assets/imgs/Phone.svg" alt="ellipse">
-                                    +7 (985) 993-26-16</p>
-                                <p class="text-md">
+                                    +7 (985) 993-26-16</a>
+                                <a href="mailto:testmail@gmail.com" class="text-md">
                                     <img src="../../assets/imgs/Envelope.svg" alt="ellipse">
-                                    testmail@gmail.com</p>
+                                    testmail@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                             <span> 3 этап </span> – Участие в Экспедиции<br><br>
                             <span> 3 – 8 октября 2023 года. </span><br><br>
                         </p>
-                        <div class="detail__content-right-description-btn__more text-md">Читать далее...</div>
+                        <!-- <div class="detail__content-right-description-btn__more text-md">Читать далее...</div> -->
                    </div>
                    <div class="detail__content-right-partners">
                     <div class="text-xl">Партнёры проекта</div>
