--- a/pages/lk_events/lk_events_empty.html
+++ b/pages/lk_events/lk_events_empty.html
@@ -94,7 +94,7 @@
                     </svg>
               <p class="title-sm dark">Мои мероприятия</p>
               <p class="text-sm gray">Вы пока не подали ни одну заявку на участие в мероприятии</p>
-            <div class="main__button blue">Список мероприятий</div>
+            <a href="#" class="main__button blue">Список мероприятий</a>
             </div>
         </div>
     </div>
