--- a/pages/lk_org_events_history/lk_events_history_detail.html
+++ b/pages/lk_org_events_history/lk_events_history_detail.html
@@ -135,7 +135,7 @@
                 <div class="event__card-top">
                     <img src="../../assets/imgs/Frame 27062.png" alt="image">
                 </div>
-                <div class="event__card-bottom">
+                <div class="event__card-bottom bottom-half-width">
                     <div class="event__card-event-time text-sm">До начала: 1д 23ч</div>
                     <div class="event__card-bottom-count">
                         <p class="event__card-bottom-count-title text-sm text-gray">Баллов за
@@ -185,14 +185,12 @@
                     <p class="text-md">Саркисян Карина Самвеловна</p>
                     <span class="text-sm">Заместитель начальника отдела</span>
                   </div>
-                  <p class="text-md">
-                    <img src="../../assets/imgs/Phone.svg" alt="ellipse" />
-                    +7 (985) 993-26-16
-                  </p>
-                  <p class="text-md">
-                    <img src="../../assets/imgs/Envelope.svg" alt="ellipse" />
-                    testmail@gmail.com
-                  </p>
+                  <a href="tel:+79859932616" class="text-md">
+                    <img src="../../assets/imgs/Phone.svg" alt="ellipse">
+                    +7 (985) 993-26-16</a>
+                <a href="mailto:testmail@gmail.com" class="text-md">
+                    <img src="../../assets/imgs/Envelope.svg" alt="ellipse">
+                    testmail@gmail.com</a>
                 </div>
               </div>
             </div>
