--- a/pages/lk_events_history/lk_events_history_detail.html
+++ b/pages/lk_events_history/lk_events_history_detail.html
@@ -418,14 +418,12 @@
                     <p class="text-md">Саркисян Карина Самвеловна</p>
                     <span class="text-sm">Заместитель начальника отдела</span>
                   </div>
-                  <p class="text-md">
-                    <img src="../../assets/imgs/Phone.svg" alt="ellipse" />
-                    +7 (985) 993-26-16
-                  </p>
-                  <p class="text-md">
-                    <img src="../../assets/imgs/Envelope.svg" alt="ellipse" />
-                    testmail@gmail.com
-                  </p>
+                  <a href="tel:+79859932616" class="text-md">
+                    <img src="../../assets/imgs/Phone.svg" alt="ellipse">
+                    +7 (985) 993-26-16</a>
+                <a href="mailto:testmail@gmail.com" class="text-md">
+                    <img src="../../assets/imgs/Envelope.svg" alt="ellipse">
+                    testmail@gmail.com</a>
                 </div>
               </div>
             </div>
