--- a/pages/lk_org_events/index_detail.html
+++ b/pages/lk_org_events/index_detail.html
@@ -95,10 +95,10 @@
                             fill="#14004E" />
                     </svg>
                     Назад</p>
-                <div class="profile-content__title title-sm dark">
+                <a href="#" class="profile-content__title title-sm dark">
                     <p>Конкурс для участия в Волонтерской экспедиции «По пути с
                         добром»</p><img src="../../assets/imgs/icons/PencilLine.svg" alt="">
-                </div>
+                    </a>
 
                 <div class="profile-content__info">
                     <div class="profile-right events profile-right__event">
@@ -107,7 +107,7 @@
                                 <div class="event__card-top">
                                     <img src="../../assets/imgs/Frame 27062.png" alt="image">
                                 </div>
-                                <div class="event__card-bottom">
+                                <div class="event__card-bottom bottom-half-width">
                                     <div class="event__card-event-time text-sm">До начала: 1д 23ч</div>
                                     <div class="event__card-bottom-count">
                                         <p class="event__card-bottom-count-title text-sm text-gray">Баллов за
@@ -155,14 +155,12 @@
                                             <p class="text-md">Саркисян Карина Самвеловна</p>
                                             <span class="text-sm">Заместитель начальника отдела</span>
                                         </div>
-                                        <p class="text-md">
+                                        <a href="tel:+79859932616" class="text-md">
                                             <img src="../../assets/imgs/Phone.svg" alt="ellipse">
-                                            +7 (985) 993-26-16
-                                        </p>
-                                        <p class="text-md">
+                                            +7 (985) 993-26-16</a>
+                                        <a href="mailto:testmail@gmail.com" class="text-md">
                                             <img src="../../assets/imgs/Envelope.svg" alt="ellipse">
-                                            testmail@gmail.com
-                                        </p>
+                                            testmail@gmail.com</a>
                                     </div>
                                 </div>
                             </div>
@@ -197,7 +195,7 @@
                                     <span> 3 этап </span> – Участие в Экспедиции<br><br>
                                     <span> 3 – 8 октября 2023 года. </span><br><br>
                                 </p>
-                                <div class="detail__content-right-description-btn__more text-md">Читать далее...</div>
+                                <!-- <div class="detail__content-right-description-btn__more text-md">Читать далее...</div> -->
                             </div>
                             <div class="detail__content-right-partners">
                                 <div class="text-xl">Партнёры проекта</div>
